# bevy-simd-bench

./: Cargo.toml  README.md
.cargo/: config.toml
benches/: bench.rs
benches/impls/: aosoa_sse4.rs  mod.rs  naive.rs  naive_aligned.rs  naive_batched_swizzle.rs  simd_batch_4.rs  simd_batch_sse4.rs
src/: main.rs
